Update: stop animation on mobile

--- a/src/legends/modules/Home/components/LandingSection/LandingSection.module.scss
+++ b/src/legends/modules/Home/components/LandingSection/LandingSection.module.scss
@@ -169,6 +169,7 @@
 
 
             .logoGlass {
+                animation: none;
                 position: absolute;
                 bottom: 0;
                 right: 0;
